RESOLVED FIXED 76619
[WK2] fast/url/degenerate-file-base.html fails
https://bugs.webkit.org/show_bug.cgi?id=76619
Summary [WK2] fast/url/degenerate-file-base.html fails
Csaba Osztrogonác
Reported 2012-01-19 04:04:49 PST
This test introduced in http://trac.webkit.org/changeset/105294, but fails on Qt-WK2. I don't know if it is Qt specific bug or WK2 specific bug, because the Apple SL WK2 tester doesn't work long long time ago. --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/fast/url/degenerate-file-base-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/fast/url/degenerate-file-base-actual.txt @@ -1,2 +1,2 @@ Base URL: file:/// -Should say PASS: PASS +Should say PASS:
Attachments
proposed fix (2.90 KB, patch)
2012-01-19 11:05 PST, Alexey Proskuryakov
no flags
Csaba Osztrogonác
Comment 1 2012-01-19 05:05:39 PST
Alexey Proskuryakov
Comment 2 2012-01-19 10:27:35 PST
It also fails on Mac WK2. Looking into this.
Alexey Proskuryakov
Comment 3 2012-01-19 11:00:08 PST
This is caused by a bug in WebKitTestRunner - it creates a wrong URL for UNIX style paths. Note the two slashes after localhost: file://localhost//Users/ap/Safari/OpenSource/LayoutTests/fast/url/degenerate-file-base.html
Alexey Proskuryakov
Comment 4 2012-01-19 11:05:32 PST
Created attachment 123149 [details] proposed fix There is a good chance that this will change many other WK2 test results. I didn't check locally, because I'm getting way too much noise from already failing tests.
WebKit Review Bot
Comment 5 2012-01-19 16:13:21 PST
Comment on attachment 123149 [details] proposed fix Clearing flags on attachment: 123149 Committed r105461: <http://trac.webkit.org/changeset/105461>
WebKit Review Bot
Comment 6 2012-01-19 16:13:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.