[WK2] fast/url/degenerate-file-base.html fails https://bugs.webkit.org/show_bug.cgi?id=76619

Reviewed by Adam Roben.

Tools:

A URL generated form local path for loading had an extra slash, making document.URL
incorrect in all WebKit2 tests (file://localhost//path/to/test.html).

* WebKitTestRunner/TestInvocation.cpp: (WTR::createWKURL):

LayoutTests:

* platform/qt-wk2/Skipped: Unskipped the test.


Canonical link: https://commits.webkit.org/93504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105461 268f45cc-cd09-0410-ab3c-d52691b4dbfc