Tools/WebKitTestRunner/TestInvocation.cpp
@@ -59,16 +59,17 @@ static WKURLRef createWKURL(const char* pathOrURL)
     if (!length)
         return 0;
 
-    // FIXME: Remove the "localhost/" suffix once <http://webkit.org/b/55683> is fixed.
-    const char* filePrefix = "file://localhost/";
-    static const size_t prefixLength = strlen(filePrefix);
 #if OS(WINDOWS)
     const char separator = '\\';
     bool isAbsolutePath = length >= 3 && pathOrURL[1] == ':' && pathOrURL[2] == separator;
+    // FIXME: Remove the "localhost/" suffix once <http://webkit.org/b/55683> is fixed.
+    const char* filePrefix = "file://localhost/";
 #else
     const char separator = '/';
     bool isAbsolutePath = pathOrURL[0] == separator;
+    const char* filePrefix = "file://";
 #endif
+    static const size_t prefixLength = strlen(filePrefix);
 
     OwnArrayPtr<char> buffer;
     if (isAbsolutePath) {
